--- a/src/pages/home/index.css
+++ b/src/pages/home/index.css
@@ -24,3 +24,18 @@
     grid-template-columns: repeat(auto-fill, minmax(80px, 1fr));
     gap: 10px;
 }
+
+.card-list {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+    gap: 10px;
+    padding: 10px;
+}
+
+.card {
+    height: 225px;
+    background-image: url('../../assets/images/bg.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
