--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -39,3 +39,16 @@ a {
   font-size: 16px;
   color: #303133;
 }
+
+.description {
+  margin: 0;
+  font-size: 13px;
+  color: #303133;
+  line-height: 1.5;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  transition: all 0.3s ease;
+  width: fit-content;
+}
